--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,33 @@
-name: Deploy
+name: Run Python App
+
 on:
   push:
-    branches: main
-  pull_request:
-    branches: main
+    branches:
+      - main
+  workflow_dispatch:
+  schedule:
+    - cron: "*/15 * * * *"  # runs every 15 minutes
 
 jobs:
-  deploy:
-    name: Deploy
+  run:
     runs-on: ubuntu-latest
 
-    permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
-
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Install Deno
-        uses: denoland/setup-deno@v2
-        with:
-          deno-version: v2.x
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
+    - name: Install dependencies
+      run: |
+        if [ -f requirements.txt ]; then
+          pip install -r requirements.txt
+        else
+          echo "No requirements.txt found"
+        fi
 
-      - name: Install step
-        run: "app.py"
-
-      - name: Build step
-        run: "app.py"
-
-      - name: Upload to Deno Deploy
-        uses: denoland/deployctl@v1
-        with:
-          project: "rahulvishaw-aarav-sanat-97"
-          entrypoint: "app.py"
-          root: "app.py"
-          include: app.py
-          exclude: app.py
+    - name: Run main.py
+      run: python app.py
